dataset1235/2025-2/805158916/users/2931402603/executions/71079933_3788368433.log
== RUN (2025-08-13 14:39:32)
-- CODE: 
# Use este codigo como ponto de partida
input("Alek")
# Leitura de valores de entrada
var = "Alek"

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
AlekAlek
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
AlekAlek
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
AlekAlek
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
AlekAlek
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
AlekAlek
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 14:39:34)
-- CODE: 
# Use este codigo como ponto de partida
input("Alek")
# Leitura de valores de entrada
var = "Alek"

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
AlekAlek
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
AlekAlek
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
AlekAlek
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
AlekAlek
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
AlekAlek
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 14:38:41)
-- CODE: 
# Use este codigo como ponto de partida
input(Alek)
# Leitura de valores de entrada
var = Alek

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    input(Alek)
          ^^^^
NameError: name 'Alek' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    input(Alek)
          ^^^^
NameError: name 'Alek' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    input(Alek)
          ^^^^
NameError: name 'Alek' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    input(Alek)
          ^^^^
NameError: name 'Alek' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    input(Alek)
          ^^^^
NameError: name 'Alek' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
